k8s/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics
        image: alekhyaah/house-price-analytics:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
