k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: house-price-backend:v3
        imagePullPolicy: Never

        ports:
        - containerPort: 5000
