k8s/prediction-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prediction-service

spec:
  selector:
    app: prediction

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
